--- a/arch/arm64/boot/dts/rockchip/rk3399-tb.dtsi
+++ b/arch/arm64/boot/dts/rockchip/rk3399-tb.dtsi
@@ -40,20 +40,23 @@
  *     OTHER DEALINGS IN THE SOFTWARE.
  */
 
-/dts-v1/;
-#include "rk3399-tb.dtsi"
+#include "rk3399.dtsi"
 
 / {
-	model = "Rockchip Chrome";
-	compatible = "rockchip,chrome", "rockchip,rk3399";
+	compatible = "rockchip,tb", "rockchip,rk3399";
+};
 
-	chosen {
-		bootargs = "rootwait cros_debug cros_secure ro root=/dev/mmcblk0p3 init=/sbin/init console=uart,mmio32,0xff1a0000";
-	};
+&i2s0 {
+	status = "okay";
+};
 
-	memory@00000000 {
-		device_type = "memory";
-		reg = <0x0 0x00000000 0x0 0x20000000>;
-	};
+&tsadc {
+	rockchip,hw-tshut-mode = <1>; /* tshut mode 0:CRU 1:GPIO */
+	rockchip,hw-tshut-polarity = <0>; /* tshut polarity 0:LOW 1:HIGH */
+	status = "okay";
+};
+
+&uart2 {
+	status = "okay";
 };
 
