--- a/arch/arm64/boot/dts/rockchip/rk3399.dtsi
+++ b/arch/arm64/boot/dts/rockchip/rk3399.dtsi
@@ -1350,5 +1350,12 @@
 					<1 14 RK_FUNC_1 &pcfg_pull_none>;
 			};
 		};
+
+		pmic {
+			pmic_int_l: pmic-int-l {
+				rockchip,pins =
+					<1 21 RK_FUNC_GPIO &pcfg_pull_up>;
+			};
+		};
 	};
 };
