--- a/arch/arm64/boot/dts/rockchip/rk3366-tb.dts
+++ b/arch/arm64/boot/dts/rockchip/rk3366-tb.dts
@@ -413,7 +413,7 @@
 		regulator-boot-on;
 		regulator-initial-state = <3>;
 		regulator-state-mem {
-			regulator-on-in-suspend;
+			regulator-off-in-suspend;
 			regulator-suspend-microvolt = <900000>;
 		};
 	};
