ARM64: dts: rockchip: add clk_ignore_unused for rk3399
Change-Id: I2f6faf3807d5c3b347d8b6930cc8f29c56746b2a
Signed-off-by: Jianqun Xu <jay.xu@rock-chips.com>

--- a/arch/arm64/boot/dts/rockchip/rk3399-chrome.dts
+++ b/arch/arm64/boot/dts/rockchip/rk3399-chrome.dts
@@ -48,7 +48,7 @@
 	compatible = "rockchip,chrome", "rockchip,rk3399";
 
 	chosen {
-		bootargs = "rootwait cros_debug cros_secure ro root=/dev/mmcblk0p3 init=/sbin/init console=uart,mmio32,0xff1a0000";
+		bootargs = "rootwait cros_debug cros_secure ro root=/dev/mmcblk0p3 init=/sbin/init console=uart,mmio32,0xff1a0000 clk_ignore_unused";
 	};
 
 	memory@00000000 {
