ARM64: dts: rk3399: chrome: enable vop and vop iommu node
Change-Id: I0a92ac277c76d086703fe844bc0fa34a68a428c3
Signed-off-by: Mark Yao <mark.yao@rock-chips.com>

--- a/arch/arm64/boot/dts/rockchip/rk3399-chrome.dts
+++ b/arch/arm64/boot/dts/rockchip/rk3399-chrome.dts
@@ -57,3 +57,22 @@
 	};
 };
 
+&vopb {
+	status = "okay";
+};
+
+&vopb_mmu {
+	status = "okay";
+};
+
+&vopl {
+	status = "okay";
+};
+
+&vopl_mmu {
+	status = "okay";
+};
+
+&display_subsystem {
+	status = "okay";
+};
